Fixed the two column layout to fit bleeding img

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ h3 {
     font-size: 2.5rem;
     font-weight: medium;
     margin-bottom: 2rem;
-    margin-top: 0;
+    margin-top: 1rem;
 }
 
 h4 {
@@ -165,6 +165,18 @@ video {
         margin-right: 0.5rem;
     }
 }
+
+.wrapper-full-width {
+    margin-left: 0rem;
+}
+
+@media only screen and (max-width: 60em) {
+    .wrapper-full-width {
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+    }
+}
+
 
 
 /* Big introdiction display */
@@ -510,7 +522,7 @@ footer>p {
 .two-column-grid {
     margin-top: 8rem;
     margin-bottom: 3rem;
-    grid-gap: 0.5rem;
+    grid-gap: 1.5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas:
